--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,38 @@
-.App {
-  text-align: center;
+.selected_user {
+    background-color: aqua;
+    margin: 50px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.post_function {
+    background-color: cornsilk;
+    margin: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.post_function-pull_down_user {
+    display: inline-block;
+    margin: 20px;
+    padding-right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.input_text {
+    display: inline-block;
+    margin: 10px;
+    padding-left: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post_button {
+    display: inline-block;
+    margin: 10px;
+    padding-left: 20px;
 }
+
+.my_account {
+    background-color: grey;
+    padding: 10px;
+}
+
+.after_post_view {
+    background-color: aliceblue;
+    margin: 50px;
+}
+
