--- a/src/UserInformation.css
+++ b/src/UserInformation.css
@@ -4,9 +4,9 @@
 }
 
 .account_box {
-    margin-left : 10px;
-    margin-top : 10px;
-    margin-bottom : 30px;
+    padding-left : 10px;
+    padding-top : 10px;
+    padding-bottom : 30px;
     width: 100px;
     height: 100px;
 
